--- a/.gitignore
+++ b/.gitignore
@@ -83,13 +83,12 @@ web_modules/
 .cache
 .parcel-cache
 
-# Next.js build output
-.next
+# Next.js build output (Removed `.next/` to ensure it is included)
+# .next  
 out
 
-# Nuxt.js build / generate output
-.nuxt
-dist
+# Nuxt.js build / generate output (Removed `dist/` to ensure it is included)
+# dist  
 
 # Gatsby files
 .cache/
@@ -134,3 +133,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Ensure the build folder is tracked
+!build/
